api code reorganized and nats messaging abstracted

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,9 @@ version: "3.8"
 services:
 
   magnetar:
-    build: .
+    build:
+      context: ..
+      dockerfile: magnetar/Dockerfile
     image: magnetar
     container_name: magnetar
     hostname: ${MAGNETAR_HOSTNAME}
@@ -55,7 +57,8 @@ services:
 
   oort:
     build:
-      context: ../oort
+      context: ..
+      dockerfile: oort/Dockerfile
     image: oort
     container_name: oort
     hostname: ${OORT_HOSTNAME}
@@ -70,34 +73,11 @@ services:
       - NEO4J_DBNAME=${NEO4J_DBNAME}
       - NATS_HOSTNAME=${NATS_HOSTNAME}
       - NATS_PORT=${NATS_PORT}
-      - REDIS_HOSTNAME=${REDIS_HOSTNAME}
-      - REDIS_PORT=${REDIS_PORT}
-      - CACHE_EVICTION_MIN=${CACHE_EVICTION_MIN}
     networks:
       - network
     depends_on:
       - neo4j
       - nats
-      - redis
-
-  poller:
-    build:
-      context: ../oort/poller
-    container_name: poller
-    hostname: poller
-    restart: on-failure
-    environment:
-      - NEO4J_HOSTNAME=${NEO4J_HOSTNAME}
-      - NEO4J_BOLT_PORT=${NEO4J_BOLT_PORT}
-      - NEO4J_DBNAME=${NEO4J_DBNAME}
-      - NATS_HOSTNAME=${NATS_HOSTNAME}
-      - NATS_PORT=${NATS_PORT}
-      - POLL_INTERVAL_IN_MS=${POLL_INTERVAL_IN_MS}
-    depends_on:
-      - neo4j
-      - nats
-    networks:
-      - network
 
   neo4j:
     image: neo4j:4.4.12
@@ -118,14 +98,6 @@ services:
       - NEO4J_dbms_connector_bolt_listen__address=:${NEO4J_BOLT_PORT}
       - NEO4J_dbms_connector_http_listen__address=:${NEO4J_HTTP_PORT}
       - NEO4J_dbms_security_auth__enabled=${NEO4J_AUTH_ENABLED}
-    networks:
-      - network
-
-  redis:
-    image: redis:6.2-alpine
-    restart: on-failure
-    container_name: redis
-    hostname: ${REDIS_HOSTNAME}
     networks:
       - network
 
