Startup blackhose togeathed with other services

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -98,6 +98,48 @@ services:
     depends_on:
       - nats
 
+  queue:
+    build:
+      context: ../blackhole
+      dockerfile: Dockerfile
+      args:
+        - GRPC_PORT=${BLACKHOLE_GRPC_PORT}
+    image: blackhole
+    container_name: blackhole
+    restart: always
+    networks:
+      - network
+    ports:
+      - ${BLACKHOLE_GRPC_PORT}:${BLACKHOLE_GRPC_PORT}
+    environment:
+      GRPC_PORT: ${BLACKHOLE_GRPC_PORT}
+      DB_USERNAME: ${DB_USERNAME}
+      DB_PASSWORD: ${DB_PASSWORD}
+      DB_NAME: ${DB_NAME}
+      DB_HOST: ${DB_HOST}
+      DB_PORT: ${DB_PORT}
+    depends_on:
+      - database
+
+  database:
+    image: postgres:14.5
+    networks:
+      - network
+    volumes:
+      - db-data:/var/lib/postgresql/data
+    environment:
+      POSTGRES_USER: ${DB_USERNAME}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      POSTGRES_DB: ${DB_NAME}
+
+  adminer:
+    image: adminer
+    restart: always
+    networks:
+      - network
+    ports:
+      - 7000:8080
+
   neo4j:
     image: neo4j:4.4.12
     container_name: neo4j
@@ -145,6 +187,9 @@ services:
       - ETCD_ADVERTISE_CLIENT_URLS=http://${ETCD_HOSTNAME}:${ETCD_PORT}
     networks:
       - network
+volumes:
+  db-data:
+    driver: local
 
 networks:
   network:
