--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -92,11 +92,13 @@ services:
       - KUIPER_ADDRESS=:${KUIPER_PORT}
       - OORT_ADDRESS=${OORT_HOSTNAME}:${OORT_PORT}
       - MAGNETAR_ADDRESS=${MAGNETAR_HOSTNAME}:${MAGNETAR_PORT}
+      - BLACKHOLE_ADDRESS=${BLACKHOLE_HOSTNAME}:${BLACKHOLE_PORT}
       - NATS_ADDRESS=${NATS_HOSTNAME}:${NATS_PORT}
     networks:
       - network
     depends_on:
       - nats
+      - queue
 
   queue:
     build:
