Add config for new star endpoint

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,7 @@ services:
       - ${STAR_PORT}
     ports:
       - ${STAR_PORT}:${STAR_PORT}
+      - ${STAR_HTTP_PORT}:${STAR_HTTP_PORT}
     environment:
       - STAR_ADDRESS=:${STAR_PORT}
       - OORT_ADDRESS=${OORT_HOSTNAME}:${OORT_PORT}
@@ -92,6 +93,7 @@ services:
       - KUIPER_ADDRESS=:${KUIPER_PORT}
       - OORT_ADDRESS=${OORT_HOSTNAME}:${OORT_PORT}
       - MAGNETAR_ADDRESS=${MAGNETAR_HOSTNAME}:${MAGNETAR_PORT}
+      - STAR_HTTP_ADDRESS=${STAR_HOSTNAME}:${STAR_HTTP_PORT}
       - BLACKHOLE_ADDRESS=${BLACKHOLE_HOSTNAME}:${BLACKHOLE_PORT}
       - NATS_ADDRESS=${NATS_HOSTNAME}:${NATS_PORT}
     networks:
